fix transaction visibility

--- a/src/main/resources/views/css/main.css
+++ b/src/main/resources/views/css/main.css
@@ -72,6 +72,10 @@
     -fx-padding: 25;
 }
 
+.p-10{
+    -fx-padding: 100;
+}
+
 /* Margins all*/
 
 .m-1{
